[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "miles-guess"
authors = [{name = "John Schreck, David John Gagne, Charlie Becker, Gabrielle Gantos", email = "milescore@ucar.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "numpy<2",
    "scipy",
    "matplotlib",
    "pandas",
    "xarray",
    "keras",
    "scikit-learn",
    "netcdf4",
    "pyyaml",
    "tqdm",
    "sphinx",
    "numba",
    "properscoring",
    "pyarrow",
    "imbalanced-learn",
    "bridgescaler",
    "echo-opt",
    "hagelslag",
    "jupyter",
    "nbsphinx",
    "myst_parser",
    "sphinx_book_theme",
    "pytest",
    "hagelslag"
    ]

[project.optional-dependencies]
tensorflow = ["tensorflow>=2.16.0"]

tensorflow_gpu = ["tensorflow[and-cuda]>=2.16.0"]

torch = ["torch"]

jax = ["jax"]



[tool.setuptools]
packages = ["mlguess", "mlguess.keras", "mlguess.torch"]

[tool.setuptools.dynamic]
version = {file = "mlguess/VERSION"}
readme = {file = ["README.md"]}
