[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "miles-guess"
authors = [{name = "University Corporation for Atmospheric Research", email = "milescore@ucar.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "xarray",
    "keras",
    "scikit-learn",
    "netcdf4",
    "pyyaml",
    "tqdm",
    "sphinx",
    "numba",
    "properscoring",
    "pyarrow",
    "imbalanced-learn",
    "bridgescaler",
    "echo-opt",
    "hagelslag",
    "jupyter",
    "nbsphinx",
    "myst_parser",
    "sphinx_book_theme",
    "hagelslag",
    ]

[project.optional-dependencies]
tensorflow = ["tensorflow>=2.16.0"]

tensorflow_gpu = ["tensorflow[and-cuda]>=2.16.0"]

torch = ["torch", "safetensors"]

jax = ["jax"]



[tool.setuptools]
packages = ["mlguess", "mlguess.keras", "mlguess.torch"]

[tool.setuptools.dynamic]
version = {file = "mlguess/VERSION"}
readme = {file = ["README.md"]}

[tool.ruff]
lint.pydocstyle.convention = "google"
